--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="result">Result</string>
     <string name="fahrenheit_f" translatable="false">Fahrenheit (°F)</string>
     <string name="ERROR_NAN_INPUT">Error, input is not a number</string>
+    <string name="switch_auto_convert">Auto-convert</string>
 </resources>
